--- a/index.html
+++ b/index.html
@@ -75,7 +75,7 @@
 									<div class="content">
 										<h2 class="major">Rólam</h2>
 										<p>
-											Juhász Kata vagyok, 22 éves. Kiskoromtól kezdve kapcsolódom az emberekhez, egyszer beszéltem, másszor rosszalkodtam, és van, hogy érintettem. Ezt az érintést mint szeretetnyelvet fejlesztettem tovább a lomi lomi nui masszázs technikáival. Tulajdonképpen ez egy szertartás, ami masszázs folyamatot von maga után. Lancsin Zsuzsannánál találkoztam először a lomi világával, és rá kellett jönnöm, hogy két ember között más minőségű is lehet az érintés, nem úgy mint egy hétköznapi ölelés vagy akár egy simítás a kézfejen.
+											Juhász Kata vagyok, 96-ban születtem. Kiskoromtól kezdve kapcsolódom az emberekhez, egyszer beszéltem, másszor rosszalkodtam, és van, hogy érintettem. Ezt az érintést mint szeretetnyelvet fejlesztettem tovább a lomi lomi nui masszázs technikáival. Tulajdonképpen ez egy szertartás, ami masszázs folyamatot von maga után. Lancsin Zsuzsannánál találkoztam először a lomi világával, és rá kellett jönnöm, hogy két ember között más minőségű is lehet az érintés, nem úgy mint egy hétköznapi ölelés vagy akár egy simítás a kézfejen.
 											<br />
 											A lomival meghívlak egy gyógyító folyamatra, amely az elméd elcsendesítésével utat mutat a megoldás felé a hétköznapi nehézségeiddel szemben.
 											Megnyílhatsz önmagad felé, energiáid egyensúlyba kerülhetnek.
