some changes due to real new data

--- a/index.html
+++ b/index.html
@@ -90,8 +90,8 @@
 								<div class="inner">
 									<a href="#" class="image"><img src="images/pic03.jpg" alt="" /></a>
 									<div class="content">
-										<h2 class="major">az életenergiánk öt különböző tulajdonságának a megnyilvánulásai</h2>
-										<p><a href="http://eljunktudatosan.hu/5-elem-tana/ot-elem-tana.html">A tudatosabb életért kattintson ide!</a></p>
+										<h2 class="major">A Dinamikus Rapid Masszázs egy masszázsszéken végzett, hagyományos (keleti) és modernkori (nyugtai) elveket és technikákat saját fejlesztésű fogásokkal ötvöző, intenzív, energikus masszázsfajta.</h2>
+										<p><a href="https://rapidmassage.eu/">A részletekért kattintson ide!</a></p>
 										<!-- <a href="#" class="special">Learn more</a> -->
 									</div>
 								</div>
@@ -141,6 +141,19 @@
 											</p>
 											<!-- <a href="#" class="special">Learn more</a> -->
 										</article>
+										<article style="width: 100%;">
+											<a href="#" class="image"><img src="images/pic07.jpg" alt="" /></a>
+											<h3 class="major">Aromamasszázs</h3>
+											<p>
+												Tiszta Terapiás tisztaságú esszenciális olajok, melyet a világon fellelhető legmagasabb szintű terápiás hatással rendelkező olajként ismertek el. Így 													kiemelkedő szerepet játszik mind a betegségek megelőzésben, mind az egészség megőrzésben.<br />
+													- stressz<br />
+													- méreganyagok jelenléte<br />
+													- gyulladásos folyamatok<br />
+													- vegetatív idegrendszeri egyensúlytalanság<br />
+												Felismerve, hogy a szervezet megbetegedései mögött nagy mértékben ezeket az okokat találjuk. Az AromaTouch® technikát ezen állapotok kezelésére, az egyensúlyi állapot visszaállítására (homeosztázis) dolgozták ki.<br />
+											</p>
+											<!-- <a href="#" class="special">Learn more</a> -->
+										</article>
 									</section>
 									<!-- <ul class="actions">
 										<li><a href="#" class="button">Browse All</a></li>
@@ -157,20 +170,20 @@
 							<form method="post" action="#">
 								<div class="fields">
 									<div class="field">
-										<iframe src="https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d2695.0716976404574!2d19.061041051402146!3d47.50799490267509!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x4741dc7212c465fd%3A0x8a504145344e61c0!2sBudapest%2C+Csengery+u.+64%2C+1067!5e0!3m2!1shu!2shu!4v1539628571653" frameborder="0" style="border: 0; width: 100%; height: 480px;" allowfullscreen></iframe>
+										<iframe src="https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d2697.1427775986904!2d19.04535201562572!3d47.46764707917579!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x4741dda50c23c0c5%3A0xb023866adfbd40ac!2sBudapest%2C%20N%C3%A1dorliget%20u.%207a%2C%201117!5e0!3m2!1sen!2shu!4v1580049298109!5m2!1sen!2shu" frameborder="0" style="border:0; width: 100%; height: 480px;" allowfullscreen></iframe>
 									</div>
 								</div>
 							</form>
 							<ul class="contact">
 								<li class="fa-home">
-									Csengery u. 64.<br />
-									Oktogon 5<br />
-									Budapest, 1067
+									InstaHair<br />
+									Nádorliget utca 7/a<br />
+									Budapest, 1117
 								</li>
 								<li class="fa-phone">(30) 20 80 206</li>
 								<li class="fa-envelope"><a href="#">katajuhasz96@gmail.com</a></li>
 								<li class="fa-facebook"><a href="https://www.facebook.com/kata.masszazs.mixek">facebook.com/kata.masszazs.mixek</a></li>
-								<li class="fa-instagram"><a href="https://www.instagram.com/katie.9611">instagram.com/katie.9611</a></li>
+								<li class="fa-instagram"><a href="https://www.instagram.com/katamasszazsok">instagram.com/katamasszazsok</a></li>
 							</ul>
 							<ul class="copyright">
 								<li>&copy; Juhász Kata</li>
@@ -191,3 +204,4 @@
 
 	</body>
 </html>
+
