--- a/index.html
+++ b/index.html
@@ -49,7 +49,7 @@
 						<div class="inner">
 							<div class="logo"><span class="icon fa-diamond"></span></div>
 							<h2>Szellemi-testi gyógyulás, felfrissülés</h2>
-							<p>lomi lomi masszázs, svédmasszázs, talpmasszázs</p>
+							<p>lomi lomi masszázs, aromamasszázs, svédmasszázs, talpmasszázs</p>
 						</div>
 					</section>
 
