--- a/index.html
+++ b/index.html
@@ -75,9 +75,9 @@
 									<div class="content">
 										<h2 class="major">Rólam</h2>
 										<p>
-											Juhász Kata vagyok, 96-ban születtem. Kiskoromtól kezdve kapcsolódom az emberekhez, egyszer beszéltem, másszor rosszalkodtam, és van, hogy érintettem. Ezt az érintést mint szeretetnyelvet fejlesztettem tovább a lomi lomi nui masszázs technikáival. Tulajdonképpen ez egy szertartás, ami masszázs folyamatot von maga után. Lancsin Zsuzsannánál találkoztam először a lomi világával, és rá kellett jönnöm, hogy két ember között más minőségű is lehet az érintés, nem úgy mint egy hétköznapi ölelés vagy akár egy simítás a kézfejen.
+											Juhász Kata vagyok, 96-ban születtem. Kiskoromtól kezdve kapcsolódom az emberekhez, egyszer beszéltem, másszor rosszalkodtam, és van, hogy érintettem. Ezt az érintést mint szeretetnyelvet fejlesztettem tovább a különböző masszázs technikákkal. Lancsin Zsuzsannánál a lomi lomi nui-t tanultam ki először, és rá kellett jönnöm, hogy két ember között más minőségű is lehet az érintés, nem úgy mint egy hétköznapi ölelés vagy akár egy simítás a kézfejen.
 											<br />
-											A lomival meghívlak egy gyógyító folyamatra, amely az elméd elcsendesítésével utat mutat a megoldás felé a hétköznapi nehézségeiddel szemben.
+											A masszázsaimmal meghívlak egy gyógyító folyamatra, amely az elméd elcsendesítésével utat mutat a megoldás felé a hétköznapi nehézségeiddel szemben.
 											Megnyílhatsz önmagad felé, energiáid egyensúlyba kerülhetnek.
 										</p>
 										<!-- <a href="#" class="special">Learn more</a> -->
@@ -90,8 +90,11 @@
 								<div class="inner">
 									<a href="#" class="image"><img src="images/pic03.jpg" alt="" /></a>
 									<div class="content">
-										<h2 class="major">A Dinamikus Rapid Masszázs egy masszázsszéken végzett, hagyományos (keleti) és modernkori (nyugtai) elveket és technikákat saját fejlesztésű fogásokkal ötvöző, intenzív, energikus masszázsfajta.</h2>
-										<p><a href="https://rapidmassage.eu/">A részletekért kattintson ide!</a></p>
+										<h2 class="major">Dinamikus Rapid Masszázs</h2>
+										<p>
+										    A Dinamikus Rapid Masszázs egy masszázsszéken végzett, hagyományos (keleti) és modernkori (nyugtai) elveket és technikákat saját fejlesztésű fogásokkal ötvöző, intenzív, energikus masszázsfajta.
+										    <br/><a href="https://rapidmassage.eu/">A részletekért kattintson ide!</a>
+										</p>
 										<!-- <a href="#" class="special">Learn more</a> -->
 									</div>
 								</div>
@@ -100,7 +103,7 @@
 						<!-- Four -->
 							<section id="four" class="wrapper alt style1">
 								<div class="inner">
-									<h2 class="major">Masszázs fajták</h2>
+									<h2 class="major">Amit a masszázsaim adhatnak neked</h2>
 									<p>
 										A masszírozás a teljes szervezet működésére szabályozó, kiegyenlítő, harmonizáló hatású; Az aktív zónák ingerlésével a testben áramló életenergiára hatunk; így az energiatorlódást vagy hiányt hozhatjuk egyensúlyba.
 									</p>
@@ -111,7 +114,10 @@
 											<p>
 												A masszázs az egyik legidősebb és legerősebb formája a gyógyításnak. Lomi Lomi viszont az egyik legalaposabb formája a masszázsoknak.
 												<br />
-												A Lomi Lomi szó egyszerűen csak annyit jelent: masszázs. Ez egy páratlan gyógyító masszázs, amit az ősi Polinéziából származtatnak. Huna filozófia abban hisz, hogy a negatív gondolatok és a viselkedés, a rossz élmények, okozzák, hogy a test elveszti a harmóniáját a környezettel. A harmónia elvesztése és a szeretet hiánya vezet a különböző betegségekhez. A legegyszerűbb talán, hogy megértsd, a Lomi Lomi másik neve: a &quot;Szerető Kéz&quot; masszázs. A folyamatos símogatás, a test teljes egészében való gondozása képessé teszi a pácienst, hogy relaxáljon. A technika egy fontos része a masszázsnak és így a gyógyításnak is. A masszőr a kliensre fókuszál szeretettel és teljes szívével.
+												A Lomi Lomi szó egyszerűen csak annyit jelent: masszázs. Ez egy páratlan gyógyító masszázs, amit az ősi Polinéziából származtatnak. Huna filozófia abban hisz, hogy a negatív gondolatok és a viselkedés, a rossz élmények, okozzák, hogy a test elveszti a harmóniáját a környezettel. A harmónia elvesztése és a szeretet hiánya vezet a különböző betegségekhez.
+												Simító olajos masszázs, alkarral, kézfejjel dolgozom. Alapvetően ruhátlan masszázs, azonban egy kendővel mégis eltakarlak. Lelki-pszichés elhanyagoltságot kiegyenlítem, a jelen megélését erősítem, az Én idő minőségi eltöltésére is tökéletes.
+												<br />
+												Tulajdonképpen ez egy szertartás. Elején imával köszöntelek, végén lábfejmosással köszönök el tőled.
 												<br />
 												<a href="http://napidoktor.hu/blog/lomi-lomi-masszazs/">További leírásért kattintson ide!</a>
 											</p>
@@ -122,11 +128,10 @@
 											<h3 class="major">Svédmasszázs</h3>
 											<p>
 												A Svédmasszázs egy kifejezetten testet átgyúró, izmokat jól megmozgató, erőteljesebben végzett masszázs.
-												Rendkívül hatásosan alkalmazható az izomzat rengenerálódásában, melyet a svédmasszázs teljesen kipihentté tesz, oldva az izom minden merevségét, görcsös pontjait, csomóit (ún. fybromialgiás csomók), így az izomerő megnövekszik.
 												<br />
-												Svédmasszázs hatására az emésztőenzimek termelődése élénkül, a bélperisztaltika fokozódik, a szervezet emésztése serkentődik.
+												A masszázs látványosan nyugtatja az idegrendszert, a szorongást, a félelmeket, a munkahelyi stressz következményeit,fokozza a vérkeringést, így a sokakat fogságban tartó fejfájást és migrénes fájdalmakat megszünteti.
 												<br />
-												A masszázs látványosan nyugtatja az idegrendszert, a szorongást, a félelmeket, a munkahelyi stressz következményeit,fokozza a vérkeringést, így a sokakat fogságban tartó fejfájást és migrénes fájdalmakat megszünteti. A bőrt ért mechanikai hatások következtében méregtelenedik, sokkal rugalmasabbá válik, láthatóan megfiatalodik
+												Ezzel a masszázsommal kihozlak a mindennapi stresszből és enyhítem a fájdalmaidat.
 											</p>
 											<!-- <a href="#" class="special">Learn more</a> -->
 										</article>
@@ -137,7 +142,9 @@
 												Serkentjük a vérkeringést a sejtanyagcsere felgyorsul, ezáltal a méreganyagok, salakanyagok könnyebben kiválasztódnak.
 												A szervezet öngyógyító erőit mozgósítjuk, az energiák szabad áramlását tesszük lehetővé, aktivizáljuk az életenergiákat, serkentjük a nyirokkeringést, ezzel erősítjük az immunrendszert.
 												<br />
-												Szabályozza a hormontermelő mirigyek működését. Fájdalomcsillapító hatású. Lazító, testi-lelki feszültséget oldó hatású. Tehát a talpmasszázs alkalmas általános és helyi fájdalomcsillapításra, egyes betegségek gyógyítására. Hatását tekintve minden betegségnél alkalmazható, (kivétel a daganatos megbetegedések).
+												Tehát a talpmasszázs alkalmas általános és helyi fájdalomcsillapításra, egyes betegségek gyógyítására. Hatását tekintve minden betegségnél alkalmazható, (kivétel a daganatos megbetegedések).
+												<br />
+												Talpmasszázsom javítja az általános közérzetedet, illetve könnyebbnek érezheted magad utána.
 											</p>
 											<!-- <a href="#" class="special">Learn more</a> -->
 										</article>
@@ -151,6 +158,7 @@
 													- gyulladásos folyamatok<br />
 													- vegetatív idegrendszeri egyensúlytalanság<br />
 												Felismerve, hogy a szervezet megbetegedései mögött nagy mértékben ezeket az okokat találjuk. Az AromaTouch® technikát ezen állapotok kezelésére, az egyensúlyi állapot visszaállítására (homeosztázis) dolgozták ki.<br />
+												Ebben a masszázsomban kellemes illatok közepette relaxálhatsz, pihenhetsz. Pszichés hatását tekintve hasonló a lomi lomihoz, csak itt a háttal és a talppal foglalkozom.
 											</p>
 											<!-- <a href="#" class="special">Learn more</a> -->
 										</article>
