--- a/index.html
+++ b/index.html
@@ -75,10 +75,13 @@
 									<div class="content">
 										<h2 class="major">Rólam</h2>
 										<p>
-											Juhász Kata vagyok, 96-ban születtem. Kiskoromtól kezdve kapcsolódom az emberekhez, egyszer beszéltem, másszor rosszalkodtam, és van, hogy érintettem. Ezt az érintést mint szeretetnyelvet fejlesztettem tovább a különböző masszázs technikákkal. Lancsin Zsuzsannánál a lomi lomi nui-t tanultam ki először, és rá kellett jönnöm, hogy két ember között más minőségű is lehet az érintés, nem úgy mint egy hétköznapi ölelés vagy akár egy simítás a kézfejen.
+											Juhász Kata vagyok, masszázsterapeuta.
 											<br />
-											A masszázsaimmal meghívlak egy gyógyító folyamatra, amely az elméd elcsendesítésével utat mutat a megoldás felé a hétköznapi nehézségeiddel szemben.
-											Megnyílhatsz önmagad felé, energiáid egyensúlyba kerülhetnek.
+											Pályakezdőként 2017 nyarán sajátítottam el első masszázsomat a lomi-lomit, majd 2018 szeptemberében belevágtam a többi masszázstechnika megtanulásába.
+											Visszajáró vendégeim elégedettsége motivál, akik mindig felfrissülve és jókedvvel távoznak a kezelésekről.
+											Szeretettel meghívom egy gyógyító folyamatra, amely az elméje elcsendesítésével megnyugvást biztosít a hétköznapok nehézségeivel szemben.
+											Amint megnyílik önmaga felé, energiái egyensúlyba kerülnek.
+											Ha izmai átgyúrásán túl szüksége van a lelki megnyugvásra is, keressen bizalommal az elérhetőségeimen! &#129330;
 										</p>
 										<!-- <a href="#" class="special">Learn more</a> -->
 									</div>
@@ -107,17 +110,28 @@
 									<p>
 										A masszírozás a teljes szervezet működésére szabályozó, kiegyenlítő, harmonizáló hatású; Az aktív zónák ingerlésével a testben áramló életenergiára hatunk; így az energiatorlódást vagy hiányt hozhatjuk egyensúlyba.
 									</p>
+									<p>
+										<ul>
+											<li>Ülőmunka okozta fájdalmak?</li>
+											<li>Magas vérnyomás miatti nehéz hétköznapok?</li>
+											<li>Izomfeszülès nehezíti a mozgást?</li>
+											<li>Vagy csak a kedved nem az igazi?</li>
+										</ul>
+
+										Pihentető-gyúró masszázsaimmal megoldást nyújtok a problémáira!
+									</p>
 									<section class="features">
 										<article  style="width: 100%">
 											<a href="#" class="image"><img src="images/pic04.jpg" alt=""/></a>
 											<h3 class="major">Lomi lomi nui</h3>
 											<p>
-												A masszázs az egyik legidősebb és legerősebb formája a gyógyításnak. Lomi Lomi viszont az egyik legalaposabb formája a masszázsoknak.
+												A masszázs az egyik legidősebb és legerősebb formája a gyógyításnak.
 												<br />
-												A Lomi Lomi szó egyszerűen csak annyit jelent: masszázs. Ez egy páratlan gyógyító masszázs, amit az ősi Polinéziából származtatnak. Huna filozófia abban hisz, hogy a negatív gondolatok és a viselkedés, a rossz élmények, okozzák, hogy a test elveszti a harmóniáját a környezettel. A harmónia elvesztése és a szeretet hiánya vezet a különböző betegségekhez.
-												Simító olajos masszázs, alkarral, kézfejjel dolgozom. Alapvetően ruhátlan masszázs, azonban egy kendővel mégis eltakarlak. Lelki-pszichés elhanyagoltságot kiegyenlítem, a jelen megélését erősítem, az Én idő minőségi eltöltésére is tökéletes.
+												Lomi Lomi az egyik legalaposabb formája a masszázsoknak. Ez egy páratlan gyógyító masszázs.
+												A negatív gondolatok-viselkedés, rossz élmények okozta harmónia elvesztése, és a szeretet hiánya vezet a különböző betegségekhez.
+												Simító, olajos masszázs, alkarral, kézfejjel dolgozom. Alapvetően ruhátlan masszázs, azonban egy kendővel mégis eltakarom az érzékeny pontot. Lelki-pszichés elhanyagoltságot kiegyenlítem, a jelen megélését erősítem, és az “Én idő“ minőségi eltöltésére alkalmas.
 												<br />
-												Tulajdonképpen ez egy szertartás. Elején imával köszöntelek, végén lábfejmosással köszönök el tőled.
+												Ajánlom, ha szorong, depressziós, sok súly nyomja a vállát, vagy csak sok a stressz emiatt rosszul alszik-nincs nyugodt perce, esetleg pihenni vágyna.
 												<br />
 												<a href="http://napidoktor.hu/blog/lomi-lomi-masszazs/">További leírásért kattintson ide!</a>
 											</p>
@@ -129,9 +143,18 @@
 											<p>
 												A Svédmasszázs egy kifejezetten testet átgyúró, izmokat jól megmozgató, erőteljesebben végzett masszázs.
 												<br />
-												A masszázs látványosan nyugtatja az idegrendszert, a szorongást, a félelmeket, a munkahelyi stressz következményeit,fokozza a vérkeringést, így a sokakat fogságban tartó fejfájást és migrénes fájdalmakat megszünteti.
+												Látványosan nyugtatja az idegrendszert, a szorongást, a félelmeket, a munkahelyi stressz következményeit, fokozza a vérkeringést,
+												így a sokakat fogságban tartó fejfájást és migrénes fájdalmakat megszünteti.
 												<br />
-												Ezzel a masszázsommal kihozlak a mindennapi stresszből és enyhítem a fájdalmaidat.
+												Ezzel a masszázsommal kihozom a mindennapi stresszből és enyhítem a fájdalmait.
+												<br />
+												Tökéletes választás:
+												<ul>
+													<li>Ha nehéznek érzi a testèt, és megkönnyebbülésre vágyik</li>
+													<li>Ha magas vérnyomással küzd</li>
+													<li>Ha a sok üléstől befeszült izmok szorítják a nyaki ereket.</li>
+													<li>Munka vagy nehéz hét után relaxálni szeretne egy jót</li>
+												</ul>
 											</p>
 											<!-- <a href="#" class="special">Learn more</a> -->
 										</article>
@@ -140,11 +163,13 @@
 											<h3 class="major">Talp masszázs</h3>
 											<p>
 												Serkentjük a vérkeringést a sejtanyagcsere felgyorsul, ezáltal a méreganyagok, salakanyagok könnyebben kiválasztódnak.
-												A szervezet öngyógyító erőit mozgósítjuk, az energiák szabad áramlását tesszük lehetővé, aktivizáljuk az életenergiákat, serkentjük a nyirokkeringést, ezzel erősítjük az immunrendszert.
+												A szervezet öngyógyító erőit mozgósítjuk, az energiák szabad áramlását tesszük lehetővé, aktivizáljuk az életenergiákat,
+												serkentjük a nyirokkeringést, ezzel erősítjük az immunrendszert.
 												<br />
-												Tehát a talpmasszázs alkalmas általános és helyi fájdalomcsillapításra, egyes betegségek gyógyítására. Hatását tekintve minden betegségnél alkalmazható, (kivétel a daganatos megbetegedések).
+												A talpmasszázs alkalmas általános és helyi fájdalomcsillapításra, egyes betegségek gyógyítására. Hatását tekintve minden betegségnél alkalmazható, (kivétel a daganatos megbetegedések).
+												Közvetlenül tudjuk a szervezetet befolyásolni.
 												<br />
-												Talpmasszázsom javítja az általános közérzetedet, illetve könnyebbnek érezheted magad utána.
+												Javítja az általános közérzetet, frissít, illetve könnyebbnek érezheti a lépteit utána.
 											</p>
 											<!-- <a href="#" class="special">Learn more</a> -->
 										</article>
@@ -152,13 +177,18 @@
 											<a href="#" class="image"><img src="images/pic07.jpg" alt="" /></a>
 											<h3 class="major">Aromamasszázs</h3>
 											<p>
-												Tiszta Terapiás tisztaságú esszenciális olajok, melyet a világon fellelhető legmagasabb szintű terápiás hatással rendelkező olajként ismertek el. Így 													kiemelkedő szerepet játszik mind a betegségek megelőzésben, mind az egészség megőrzésben.<br />
-													- stressz<br />
-													- méreganyagok jelenléte<br />
-													- gyulladásos folyamatok<br />
-													- vegetatív idegrendszeri egyensúlytalanság<br />
-												Felismerve, hogy a szervezet megbetegedései mögött nagy mértékben ezeket az okokat találjuk. Az AromaTouch® technikát ezen állapotok kezelésére, az egyensúlyi állapot visszaállítására (homeosztázis) dolgozták ki.<br />
-												Ebben a masszázsomban kellemes illatok közepette relaxálhatsz, pihenhetsz. Pszichés hatását tekintve hasonló a lomi lomihoz, csak itt a háttal és a talppal foglalkozom.
+												Tiszta Terapiás tisztaságú esszenciális olajok, melyet a világon fellelhető legmagasabb szintű terápiás hatással rendelkező olajként ismertek el. Így
+												kiemelkedő szerepet játszik mind a betegségek megelőzésben, mind az egészség megőrzésben.
+												<ul>
+													<li>stressz</li>
+													<li>méreganyagok jelenléte</li>
+													<li>gyulladásos folyamatok</li>
+													<li>vegetatív idegrendszeri egyensúlytalanság</li>
+												</ul>
+												Felismerve, hogy a szervezet megbetegedései mögött nagy mértékben ezeket az okokat találjuk. Az AromaTouch® technikát ezen állapotok kezelésére, az egyensúlyi állapot visszaállítására (homeosztázis) dolgozták ki.<br />
+												Ebben a masszázsomban kellemes illatok közepette relaxálhat, pihenhet. Pszichés hatását tekintve hasonló a lomi lomihoz, csak itt a háttal és a talppal foglalkozom.
+												<br />
+												Tökéletes a számára, ha igazán természetes hatóanyagokkal szeretné megtámogatni a szervezetét, kipróbálna valami újat.
 											</p>
 											<!-- <a href="#" class="special">Learn more</a> -->
 										</article>
