--- a/index.html
+++ b/index.html
@@ -17,7 +17,7 @@
 		<!-- Page Wrapper -->
 			<div id="page-wrapper">
 
-				<!--  
+				<!--
 					<header id="header" class="alt">
 						<h1><a href="index.html">Solid State</a></h1>
 						<nav>
@@ -49,7 +49,7 @@
 						<div class="inner">
 							<div class="logo"><span class="icon fa-diamond"></span></div>
 							<h2>Szellemi-testi gyógyulás, felfrissülés</h2>
-							<p>lomi lomi masszázs, aromamasszázs, svédmasszázs, talpmasszázs</p>
+							<p>lomi lomi masszázs, aromamasszázs, svédmasszázs, talpmasszázs, cellulit masszázs</p>
 						</div>
 					</section>
 
@@ -59,11 +59,8 @@
 						<!-- One -->
 							<section id="one" class="wrapper spotlight style1">
 								<div class="inner">
-									<a href="#" class="image"><img src="images/pic01.jpg" alt="" /></a>
 									<div class="content">
 										<h2 class="major">„Légy csendes és figyelj! A módszer egyszerű: a masszőr megcsinálja a munkát és a bölcsesség megérkezik magától.”</h2>
-										<p><a href="https://www.youtube.com/watch?v=2tAXNrqBE0s">Kattintson ide, hogy megtekinthesse mire számíthat!</a></p>
-										<!-- <a href="#" class="special">Learn more</a> -->
 									</div>
 								</div>
 							</section>
@@ -71,7 +68,7 @@
 						<!-- Two -->
 							<section id="two" class="wrapper alt spotlight style2">
 								<div class="inner">
-									<a href="#" class="image"><img src="images/pic02.jpg" alt="" /></a>
+									<img src="images/pic02.jpg" alt="" class="image" />
 									<div class="content">
 										<h2 class="major">Rólam</h2>
 										<p>
@@ -79,9 +76,9 @@
 											<br />
 											Pályakezdőként 2017 nyarán sajátítottam el első masszázsomat a lomi-lomit, majd 2018 szeptemberében belevágtam a többi masszázstechnika megtanulásába.
 											Visszajáró vendégeim elégedettsége motivál, akik mindig felfrissülve és jókedvvel távoznak a kezelésekről.
-											Szeretettel meghívom egy gyógyító folyamatra, amely az elméje elcsendesítésével megnyugvást biztosít a hétköznapok nehézségeivel szemben.
-											Amint megnyílik önmaga felé, energiái egyensúlyba kerülnek.
-											Ha izmai átgyúrásán túl szüksége van a lelki megnyugvásra is, keressen bizalommal az elérhetőségeimen! &#129330;
+											Szeretettel meghívlak egy gyógyító folyamatra, amely az elméd elcsendesítésével megnyugvást biztosít a hétköznapok nehézségeivel szemben.
+											Amint megnyílsz önmagad felé, energiáid egyensúlyba kerülnek.
+											Ha izmaid átgyúrásán túl szükséged van a lelki megnyugvásra is, keress bizalommal az elérhetőségeimen! &#129330;
 										</p>
 										<!-- <a href="#" class="special">Learn more</a> -->
 									</div>
@@ -91,12 +88,12 @@
 						<!-- Three -->
 							<section id="three" class="wrapper spotlight style3">
 								<div class="inner">
-									<a href="#" class="image"><img src="images/pic03.jpg" alt="" /></a>
+									<img src="images/pic03.jpg" alt="" class="image" />
 									<div class="content">
 										<h2 class="major">Dinamikus Rapid Masszázs</h2>
 										<p>
-										    A Dinamikus Rapid Masszázs egy masszázsszéken végzett, hagyományos (keleti) és modernkori (nyugtai) elveket és technikákat saját fejlesztésű fogásokkal ötvöző, intenzív, energikus masszázsfajta.
-										    <br/><a href="https://rapidmassage.eu/">A részletekért kattintson ide!</a>
+										    A Dinamikus Rapid Masszázs egy masszázsszéken végzett, hagyományos (keleti) és modernkori (nyugati) elveket és technikákat saját fejlesztésű fogásokkal ötvöző, intenzív, energikus masszázsfajta.
+										    <br/><a href="https://rapidmassage.eu/" target="_blank">A részletekért kattints ide!</a>
 										</p>
 										<!-- <a href="#" class="special">Learn more</a> -->
 									</div>
@@ -108,89 +105,93 @@
 								<div class="inner">
 									<h2 class="major">Amit a masszázsaim adhatnak neked</h2>
 									<p>
-										A masszírozás a teljes szervezet működésére szabályozó, kiegyenlítő, harmonizáló hatású; Az aktív zónák ingerlésével a testben áramló életenergiára hatunk; így az energiatorlódást vagy hiányt hozhatjuk egyensúlyba.
+										A masszírozás a teljes szervezet működésére szabályozó, kiegyenlítő, harmonizáló hatással van.
+										Az aktív zónák ingerlésével a testben áramló életenergiára hatunk, így az energiatorlódást vagy hiányt hozhatjuk egyensúlyba.
 									</p>
 									<p>
 										<ul>
-											<li>Ülőmunka okozta fájdalmak?</li>
-											<li>Magas vérnyomás miatti nehéz hétköznapok?</li>
-											<li>Izomfeszülès nehezíti a mozgást?</li>
-											<li>Vagy csak a kedved nem az igazi?</li>
+											<li>ülőmunka okozta fájdalmak?</li>
+											<li>magas vérnyomás miatti nehéz hétköznapok?</li>
+											<li>izomfeszülès nehezíti a mozgást?</li>
+											<li>vagy csak a kedved nem az igazi?</li>
 										</ul>
 
-										Pihentető-gyúró masszázsaimmal megoldást nyújtok a problémáira!
+										Pihentető-gyúró masszázsaimmal megoldást nyújtok a problémáidra!
 									</p>
 									<section class="features">
-										<article  style="width: 100%">
-											<a href="#" class="image"><img src="images/pic04.jpg" alt=""/></a>
+										<article style="width: 100%">
+											<img src="images/pic04.jpg" alt="" class="image" />
 											<h3 class="major">Lomi lomi nui</h3>
 											<p>
 												A masszázs az egyik legidősebb és legerősebb formája a gyógyításnak.
 												<br />
 												Lomi Lomi az egyik legalaposabb formája a masszázsoknak. Ez egy páratlan gyógyító masszázs.
 												A negatív gondolatok-viselkedés, rossz élmények okozta harmónia elvesztése, és a szeretet hiánya vezet a különböző betegségekhez.
-												Simító, olajos masszázs, alkarral, kézfejjel dolgozom. Alapvetően ruhátlan masszázs, azonban egy kendővel mégis eltakarom az érzékeny pontot. Lelki-pszichés elhanyagoltságot kiegyenlítem, a jelen megélését erősítem, és az “Én idő“ minőségi eltöltésére alkalmas.
+												Simító, olajos masszázs, alkarral, kézfejjel dolgozom. Alapvetően ruhátlan masszázs, azonban egy kendővel mégis eltakarom az érzékeny pontot.
+												Lelki-pszichés elhanyagoltságot kiegyenlítem, a jelen megélését erősítem, és az “Én idő“ minőségi eltöltésére alkalmas.
 												<br />
-												Ajánlom, ha szorong, depressziós, sok súly nyomja a vállát, vagy csak sok a stressz emiatt rosszul alszik-nincs nyugodt perce, esetleg pihenni vágyna.
+												Ajánlom azoknak, akik szoronganak, depresszióval küzdenek, stressz miatt álmatlan éjszakáik vannak, illetve akiknek fontos az érintés, esetleg pihenni vágyna.
 												<br />
-												<a href="http://napidoktor.hu/blog/lomi-lomi-masszazs/">További leírásért kattintson ide!</a>
+												<a href="http://napidoktor.hu/blog/lomi-lomi-masszazs/" target="_blank">További leírásért kattintson ide!</a>
+												<br />
+												<div style="margin-left: 40px">
+													<a href="https://www.youtube.com/watch?v=2tAXNrqBE0s" target="_blank">
+														<img src="images/lomilomi.jpg" class="image" style="height: 240px; width: 380px;"  alt=""/>
+													</a>
+												</div>
 											</p>
-											<!-- <a href="#" class="special">Learn more</a> -->
 										</article>
 										<article>
-											<a href="#" class="image"><img src="images/pic05.jpg" alt="" /></a>
+											<img src="images/pic05.jpg" alt="" class="image" />
 											<h3 class="major">Svédmasszázs</h3>
 											<p>
 												A Svédmasszázs egy kifejezetten testet átgyúró, izmokat jól megmozgató, erőteljesebben végzett masszázs.
 												<br />
 												Látványosan nyugtatja az idegrendszert, a szorongást, a félelmeket, a munkahelyi stressz következményeit, fokozza a vérkeringést,
-												így a sokakat fogságban tartó fejfájást és migrénes fájdalmakat megszünteti.
+												így a sokakat fogságban tartó fejfájást és migrénes fájdalmakat enyhíti.
 												<br />
-												Ezzel a masszázsommal kihozom a mindennapi stresszből és enyhítem a fájdalmait.
+												Ezzel a masszázsommal kihozlak a mindennapi stresszből és enyhítem a fájdalmaidat.
+												<br />
 												<br />
 												Tökéletes választás:
 												<ul>
-													<li>Ha nehéznek érzi a testèt, és megkönnyebbülésre vágyik</li>
-													<li>Ha magas vérnyomással küzd</li>
-													<li>Ha a sok üléstől befeszült izmok szorítják a nyaki ereket.</li>
-													<li>Munka vagy nehéz hét után relaxálni szeretne egy jót</li>
+													<li>ha nehéznek érzed a tested, és megkönnyebbülésre vágynál</li>
+													<li>ha magas vérnyomással küzdesz</li>
+													<li>ha a sok üléstől befeszült izmok szorítják a nyaki ereket</li>
+													<li>munka vagy nehéz hét után relaxálni szeretnél egy jót</li>
 												</ul>
 											</p>
-											<!-- <a href="#" class="special">Learn more</a> -->
 										</article>
 										<article>
-											<a href="#" class="image"><img src="images/pic06.jpg" alt="" /></a>
+											<img src="images/pic06.jpg" alt="" class="image" />
 											<h3 class="major">Talp masszázs</h3>
 											<p>
-												Serkentjük a vérkeringést a sejtanyagcsere felgyorsul, ezáltal a méreganyagok, salakanyagok könnyebben kiválasztódnak.
+												Serkentjük a vérkeringést, a sejtanyagcsere felgyorsul, ezáltal a méreganyagok, salakanyagok könnyebben kiválasztódnak.
 												A szervezet öngyógyító erőit mozgósítjuk, az energiák szabad áramlását tesszük lehetővé, aktivizáljuk az életenergiákat,
 												serkentjük a nyirokkeringést, ezzel erősítjük az immunrendszert.
 												<br />
-												A talpmasszázs alkalmas általános és helyi fájdalomcsillapításra, egyes betegségek gyógyítására. Hatását tekintve minden betegségnél alkalmazható, (kivétel a daganatos megbetegedések).
+												A talpmasszázs alkalmas általános és helyi fájdalomcsillapításra.
 												Közvetlenül tudjuk a szervezetet befolyásolni.
 												<br />
-												Javítja az általános közérzetet, frissít, illetve könnyebbnek érezheti a lépteit utána.
+												Javítja az általános közérzetet, frissít, illetve könnyebbnek érezheted a lépteidet utána.
 											</p>
-											<!-- <a href="#" class="special">Learn more</a> -->
 										</article>
 										<article style="width: 100%;">
-											<a href="#" class="image"><img src="images/pic07.jpg" alt="" /></a>
+											<img src="images/pic07.jpg" alt="" class="image" />
 											<h3 class="major">Aromamasszázs</h3>
 											<p>
-												Tiszta Terapiás tisztaságú esszenciális olajok, melyet a világon fellelhető legmagasabb szintű terápiás hatással rendelkező olajként ismertek el. Így
-												kiemelkedő szerepet játszik mind a betegségek megelőzésben, mind az egészség megőrzésben.
+												Esszenciális olajok, melyet a világon fellelhető legmagasabb szintű terápiás hatással rendelkező olajként ismertek el.
+												Kiemelkedő szerepet játszik a szervezet egyensúlyának fenntartásában és az egészség megőrzésben.
 												<ul>
-													<li>stressz</li>
-													<li>méreganyagok jelenléte</li>
-													<li>gyulladásos folyamatok</li>
-													<li>vegetatív idegrendszeri egyensúlytalanság</li>
+													<li>stresszoldás</li>
+													<li>méregtelenítés</li>
+													<li>vegetatív idegrendszer egyensúlyának elősegítése</li>
 												</ul>
 												Felismerve, hogy a szervezet megbetegedései mögött nagy mértékben ezeket az okokat találjuk. Az AromaTouch® technikát ezen állapotok kezelésére, az egyensúlyi állapot visszaállítására (homeosztázis) dolgozták ki.<br />
 												Ebben a masszázsomban kellemes illatok közepette relaxálhat, pihenhet. Pszichés hatását tekintve hasonló a lomi lomihoz, csak itt a háttal és a talppal foglalkozom.
 												<br />
 												Tökéletes a számára, ha igazán természetes hatóanyagokkal szeretné megtámogatni a szervezetét, kipróbálna valami újat.
 											</p>
-											<!-- <a href="#" class="special">Learn more</a> -->
 										</article>
 									</section>
 									<!-- <ul class="actions">
@@ -204,24 +205,24 @@
 				<!-- Footer -->
 					<section id="footer">
 						<div class="inner">
-							<h2 class="major">Lépjen kapcsolatba velem</h2>
+							<h2 class="major">Lépj kapcsolatba velem</h2>
 							<form method="post" action="#">
 								<div class="fields">
 									<div class="field">
-										<iframe src="https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d2697.1427775986904!2d19.04535201562572!3d47.46764707917579!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x4741dda50c23c0c5%3A0xb023866adfbd40ac!2sBudapest%2C%20N%C3%A1dorliget%20u.%207a%2C%201117!5e0!3m2!1sen!2shu!4v1580049298109!5m2!1sen!2shu" frameborder="0" style="border:0; width: 100%; height: 480px;" allowfullscreen></iframe>
+										<iframe src="https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d2697.178151972745!2d19.04473071624006!3d47.466957705606184!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x4741dda502d1c3a5%3A0x85da7ffbaf3f9061!2sBudapest%2C%20Hauszmann%20Alajos%20u.%204b%2C%201116!5e0!3m2!1sen!2shu!4v1672484137541!5m2!1sen!2shu" width="600" height="450" style="border:0;" allowfullscreen="" loading="lazy" referrerpolicy="no-referrer-when-downgrade"></iframe>
 									</div>
 								</div>
 							</form>
 							<ul class="contact">
 								<li class="fa-home">
 									InstaHair<br />
-									Nádorliget utca 7/a<br />
+									Hauszmann Alajos utca 4/b<br />
 									Budapest, 1117
 								</li>
 								<li class="fa-phone">(30) 20 80 206</li>
-								<li class="fa-envelope"><a href="#">katajuhasz96@gmail.com</a></li>
-								<li class="fa-facebook"><a href="https://www.facebook.com/kata.masszazs.mixek">facebook.com/kata.masszazs.mixek</a></li>
-								<li class="fa-instagram"><a href="https://www.instagram.com/katamasszazsok">instagram.com/katamasszazsok</a></li>
+								<li class="fa-envelope"><a href="mailto:katajuhasz96@gmail.com">katajuhasz96@gmail.com</a></li>
+								<li class="fa-facebook"><a href="https://www.facebook.com/katamasszazsok" target="_blank">Katamasszázsok</a></li>
+								<li class="fa-instagram"><a href="https://www.instagram.com/katamasszazsok_edzesek" target="_blank">instagram.com/katamasszazsok_edzesek</a></li>
 							</ul>
 							<ul class="copyright">
 								<li>&copy; Juhász Kata</li>
